--- a/creacion-chat-g19/back/package.json
+++ b/creacion-chat-g19/back/package.json
@@ -15,10 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   }
 }
-
