--- a/creacion-chat-g19/back/package.json
+++ b/creacion-chat-g19/back/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tp-progamacion-final",
+  "name": "creacion-chat-g19",
   "version": "1.0.0",
   "description": "Proyecto de mitad de año",
   "main": "index.js",
